# MetaHuman-worker

./: .gitignore  celerybeat-schedule.dir  pyproject.toml  sentence.json  音色表.html
deploy/: deploy  操作说明.txt
scripts/: disp_comfyui.bat  disp_events.bat  disp_tts_text_gen.bat  disp_utils.bat  worker-comfyui.bat  worker-text_gen.bat  worker-thumb.bat  worker-tts.bat
tests/: README_json_to_ass.md  README_sentence_converter.md  README_split_subtitle.md  README_width_control_split.md  advanced_multilingual_subtitle.py  comprehensive_test.py  convert_test_json_to_ass.py  debug_punctuation.py  demo_comma_pause.py  demo_comma_split.py  demo_split_if_exceeds.py  demo_split_subtitle.py  demo_split_subtitle_to_ass.py  demo_width_control_split.py  json_to_ass_converter.py  main.py  output.ass  output_1080p.ass  sentence_timestamp_converter.py  sentences_output.json  sentences_output_split_if_exceeds_demo.json  server_tts.py  simple_bug_fix_test.py  simple_test.py  split_subtitle_output.ass  srt.srt  subtitle.ass  subtitle.srt  test-pub.py  test-sub.py  test-vips.py  test_advanced_multilingual.py  test_bug_fix.py  test_comma_split.py  test_complex_word_allocation.py  test_comprehensive_word_timestamps.py  test_core_functionality.py  test_edge_cases_width_control.py  test_edge_cases_word_allocation.py  test_final_validation.py  (+25 more)
tests/Agno/: agno.db  test.py
tests/results/: sentences_output_comma_split.json  test_long_sentences_comma_split.ass  test_long_sentences_comma_split.json  width_control_split_demo.json  width_control_split_result.json
work4x/: RedisPublisher.py  __init__.py  celerybeat-schedule.db  config.py  setup.py  test.py
work4x/classes/: TaskMessage.py  TaskRequest.py
work4x/comfyui_workflows/: Digital-human.json  Digital-human_api.json  indexTTS2.json  test.json
work4x/dispatchers/: BaseDispatcher.py  disp_comfyui.py  disp_event.py  disp_tts_text_gen.py  disp_utils.py  paths.py
工作流/: 数字人.json
(+50 files in other folders)
